--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<mainClass>TvprApplication</mainClass>
+					<mainClass>com.soutvoid.tvpr.TvprApplication</mainClass>
 					<layout>ZIP</layout>
 				</configuration>
 				<executions>
